# Aerocapture

./: .gitignore  CLAUDE.md  IMPROVEMENTS.md  LICENSE  README.md  TODO.md  aerocapture.code-workspace  build.sh  check_all.sh  improvements.md  lint_code.sh  paper_resume.md  pyproject.toml  run_paper_experiments.sh  run_paper_experiments10.sh  run_paper_experiments11.sh  run_paper_experiments12.sh  run_paper_experiments13.sh  run_paper_experiments14.sh  run_paper_experiments15.sh  run_paper_experiments2.sh  run_paper_experiments3.sh  run_paper_experiments4.sh  run_paper_experiments5.sh  run_paper_experiments6.sh  run_paper_experiments7.sh  run_paper_experiments8.sh  run_paper_experiments9.sh  setup_env.sh  sweep.sh  train_all.sh  upgrade_dependencies.sh
.github/workflows/: ci.yml
articles/markdown/: 00_synthesis_writing_kit.md  01_2009_AIAA_neural_guidance.md  02_2015_MWE_RNN_VAD.md  03_2016_LID_divide_and_conquer.md  04_2017_LID_angular_proximity.md  05_authorial_voice_and_style.md
articles/paper/: OUTLINE.md  REVIEW_RESPONSE_R4_R5.md  WRITING_SESSION.md  appendix.typ  paper.typ  refs.bib  review_state.json
configs/: esr_aller_ftc_nominal.toml  esr_retour_ftc_nominal.toml  msr_aller_energy_controller_train.toml  msr_aller_eqglide_train.toml  msr_aller_fnpag_train.toml  msr_aller_ftc_consolidated.toml  msr_aller_ftc_mc100.toml  msr_aller_ftc_mc_domain.toml  msr_aller_ftc_nominal.toml  msr_aller_ftc_train.toml  msr_aller_nn_mc100.toml  msr_aller_nn_train.toml  msr_aller_nn_train_consolidated.toml  msr_aller_pred_guid_train.toml  msr_aller_reference.toml  test_energy_ctrl_golden.toml  test_eqglide_golden.toml  test_fnpag_golden.toml  test_ftc_golden.toml  test_guided_orig.toml  test_high_bank_orig.toml  test_neural_golden.toml  test_pred_guid_golden.toml  test_ref_orig.toml
configs/missions/: earth.toml  mars.toml
configs/nominal/: esr_aller_ftc_nominal.toml  msr_aller_cpag_nominal.toml  msr_aller_ftc_consolidated.toml  msr_aller_ftc_mc_domain.toml  msr_aller_ftc_nominal.toml  msr_aller_reference.toml
configs/planets/: earth.toml  jupiter.toml  mars.toml  moon.toml
configs/test/: test_cpag_golden.toml  test_ekf_mars.toml  test_energy_ctrl_golden.toml  test_eqglide_golden.toml  test_fnpag_golden.toml  test_ftc_golden.toml  test_guided_orig.toml  test_high_bank_orig.toml  test_lateral_eqglide.toml  test_neural_golden.toml  test_pred_guid_golden.toml  test_ref_adaptive.toml  test_ref_orig.toml  test_wind_mars.toml
configs/training/: common.toml  mamba_double.toml  msr_aller_cpag_train.toml  msr_aller_energy_controller_joint_ref_train.toml  msr_aller_energy_controller_train.toml  msr_aller_eqglide_train.toml  msr_aller_fnpag_train.toml  msr_aller_ftc_joint_ref_train.toml  msr_aller_ftc_train.toml  msr_aller_gru_ppo_train.toml  msr_aller_gru_pso_magonly_train.toml  msr_aller_gru_pso_train.toml  msr_aller_islands_train.toml  msr_aller_lstm_ppo_train.toml  msr_aller_lstm_pso_train.toml  msr_aller_mamba_pso_train.toml  msr_aller_nn_atan2_best_paper.toml  msr_aller_nn_atan2_best_paper_1000.toml  msr_aller_nn_atan2_lean_train.toml  msr_aller_nn_atan2_ppo_train.toml  msr_aller_nn_atan2_train.toml  (+19 more)
scripts/: plot_mc_comparison.py
src/rust/: Cargo.toml
src/rust/aerocapture-py/: Cargo.toml  pyproject.toml
src/rust/aerocapture-py/src/: batch.rs  config.rs  env.rs  grid.rs  lib.rs  results.rs
src/rust/benches/: quant_forward.rs
src/rust/src/: config.rs  config_tests.rs  lib.rs  main.rs
src/rust/src/data/: aerodynamics.rs  atmosphere.rs  capsule.rs  dispersions.rs  dispersions_tests.rs  guidance_params.rs  incidence.rs  mod.rs  navigation.rs  neural.rs  neural_tests.rs  nn_state.rs  pilot.rs
src/rust/src/data/neural/: mod.rs  tests.rs
src/rust/src/data/neural/layers/: cfc.rs  dense.rs  gru.rs  helpers.rs  lstm.rs  mamba.rs  mamba3.rs  mlstm.rs  mod.rs  slstm.rs  transformer.rs  window.rs
src/rust/src/gnc/: mod.rs
src/rust/src/gnc/control/: angle_utils.rs  attitude.rs  mod.rs  pilot.rs
src/rust/src/gnc/guidance/: capture.rs  cpag.rs  cpag_tests.rs  dispatch.rs  energy_controller.rs  equilibrium_glide.rs  exit.rs  fnpag.rs  ftc.rs  lateral.rs  mod.rs  neural.rs  piecewise_constant.rs  predguid.rs  reference.rs  thermal_limiter.rs
src/rust/src/gnc/navigation/: coordinates.rs  ekf.rs  estimator.rs  estimator_tests.rs  imu.rs  mod.rs  star_tracker.rs
src/rust/src/integration/: dopri45.rs  events.rs  mod.rs  rk4.rs  sequencer.rs
src/rust/src/orbit/: elements.rs  maneuver.rs  mod.rs
src/rust/src/physics/: aerodynamics.rs  atmosphere.rs  gravity.rs  mod.rs  winds.rs
src/rust/src/simulation/: final_record.rs  finalize.rs  init.rs  mod.rs  output.rs  pending_crash_tests.rs  run_init.rs  run_output_tests.rs  runner.rs  sim_types.rs  tick.rs  virtual_dv_tests.rs
src/rust/tests/: config_loading.rs  dopri45_integration.rs  e2e.rs  edge_cases.rs  env_equivalence.rs  env_properties.rs  error_paths.rs  event_detection.rs  guidance_regression.rs  test_batched_simulation_nn_state.rs  test_forced_bank_telemetry.rs
src/rust/tests/common/: assertions.rs  fixtures.rs  mod.rs
tests/: compare_results.py  conftest.py  generate_golden.sh  run_fortran_reference.sh  test_ablation.py  test_animate.py  test_architecture_chain_check.py  test_atan2_rl_ppo_smoke.py  test_atan2_rl_scheme_registered.py  test_build_layer_transformer_rejection.py  test_calibrate_inputs.py  test_cfc_encoding.py  test_cfc_probe.py  test_cfc_pso_smoke.py  test_cfc_xlstm_ppo_rejection.py  test_charts.py  test_checkpoint_config.py  test_chromosome.py  test_cleanup_checkpoints.py  test_collect_nn_inputs.py  test_collect_supervised.py  test_collect_supervised_prev_realized.py  test_compare_guidance_apply_params.py  test_config.py  test_confirmatory_seeds.py  test_corridor.py  test_cost.py  test_cpag_model.py  test_cpag_scp.py  test_encoding.py  test_env_pyo3.py  test_eval_summary.py  test_export_v2_mamba.py  test_export_v2_transformer.py  test_feasibility_gate.py  test_final_report.py  test_final_select.py  test_flat_weights_decoders.py  test_flat_weights_to_json_acos_tanh.py  test_flat_weights_to_json_lstm.py  (+136 more)
(+1347 files in other folders)
