[project]
name = "aerocapture"
version = "0.1.0"
description = "Trajectory simulation tool for aerocapture maneuvers"
requires-python = ">=3.14"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "matplotlib>=3.8",
    "deap>=1.4",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.5",
    "mypy>=1.9",
    "pandas-stubs>=2.1",
    "scipy-stubs>=1.17.1.0",
    "types-defusedxml>=0.7.0.20250822",
    "types-openpyxl>=3.1.5.20250919",
    "types-python-dateutil>=2.9.0.20260305",
    "types-xlrd>=2.0.0.20251020",
    "hypothesis>=6.100",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/aerocapture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python"]

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src/python"
