[project]
name = "aerocapture"
version = "0.1.0"
description = "Trajectory simulation tool for aerocapture maneuvers"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "numpy>=2.4",
    "pandas>=3.0",
    "matplotlib>=3.10",
    # <0.6.2: pymoo 0.6.2 delegates internals to moocore 0.3.1's compiled code,
    # which SIGABRTs the whole interpreter silently (no traceback). Two known
    # trips: igd() for points wider than 32 dims (pymoo's default termination
    # feeds it n_var-wide design points -- any >32-param training problem dies;
    # repro: moocore.igd(rand(1, 64), ref=rand(1, 64))), and gd_common's stack
    # buffer overflow at n_pop ~512 (smoke tests at n_pop=8 pass, real runs die
    # after gen 0). The June 2026 campaign trained on 0.6.1.6.
    "pymoo>=0.6,<0.6.2",
    "scipy>=1.17.1",
    "rich>=14.3",
    "seaborn>=0.13",
    "SALib>=1.5",
    "pyarrow>=19.0",
    "tomli-w>=1.2",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "mypy>=1.9",
    "pandas-stubs>=3.0",
    "scipy-stubs>=1.17.1.0",
    "types-defusedxml>=0.7.0.20250822",
    "types-openpyxl>=3.1.5.20250919",
    "types-python-dateutil>=2.9.0.20260305",
    "types-xlrd>=2.0.0.20251020",
    "hypothesis>=6.100",
    "maturin>=1.12.6",
    "torch>=2.4",
    "types-seaborn>=0.13.2.20251221",
    "types-pygments>=2.19.0.20251121",
    "types-pexpect>=4.9.0.20260127",
    "types-colorama>=0.4.15.20260508",
    "types-networkx>=3.6.1.20260518",
    "types-protobuf>=7.34.1.20260518",
    "types-setuptools>=82.0.0.20260518",
    "types-tabulate>=0.10.0.20260508",
    "types-tqdm>=4.67.3.20260518",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python/aerocapture"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/python", "."]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
line-length = 160
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
mypy_path = "src/python"
exclude = ["tests/fixtures/"]

[[tool.mypy.overrides]]
module = ["pymoo.*", "aerocapture_rs"]
ignore_missing_imports = true
