[package]
name = "aerocapture"
version = "0.1.0"
edition = "2024"
description = "Trajectory simulation for aerocapture maneuvers"

[dependencies]
nalgebra = "0.34"
rand = "0.9"
rand_distr = "0.5"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[dev-dependencies]

[profile.release]
opt-level = 3
lto = true
