[package]
name = "aerocapture"
version = "0.1.0"
edition = "2024"
description = "Trajectory simulation for aerocapture maneuvers"

[dependencies]
nalgebra = "0.34"
rand = "0.10"
rand_distr = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9.8"

[dev-dependencies]
approx = "0.5"
rstest = "0.26"
proptest = "1.6"

[profile.release]
opt-level = 3
lto = true
