[workspace]
members = [".", "aerocapture-py"]

[package]
name = "aerocapture"
version = "0.1.0"
edition = "2024"
description = "Trajectory simulation for aerocapture maneuvers"
license = "MIT"

[dependencies]
libm = "0.2"
nalgebra = "0.35"
rand = "0.10"
rand_distr = "0.6"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
sobol_burley = "0.5"
toml = "0.9.8"

[dev-dependencies]
approx = "0.5"
rstest = "0.26"
proptest = "1.10"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
